# learnanything

./: .gitattributes  .gitignore  GRAPH_EDITOR_DESIGN.md  PLANS.md  README.md  architecture_pivot.md  documentation.md  implementation_plan_km_ingestion_v2.md  open-questions.md  pyproject.toml  spec.md  spec_fork_features  spec_mvp_v0_3.md  spec_new_improvements.md  spec_new_improvements_v2.md  test_suite_audit.md
apps/: learnloop-tauri\sidecar-debug.jsonl
apps/learnloop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/learnloop-tauri/src-tauri/.cargo/: config.toml
apps/learnloop-tauri/src-tauri/capabilities/: default.json
apps/learnloop-tauri/src-tauri/src/: commands.rs  errors.rs  main.rs  sidecar.rs
migrations/: 012_facet_diagnostic_state.sql  013_proposal_item_source_refs.sql  014_intervention_diagnostic_focus.sql  015_followup_gate_trace.sql  016_fitted_parameters.sql  017_followup_ratings.sql  018_exam_evidence_attempt_type.sql  019_question_events.sql  020_teach_back_attempt_type.sql  021_primed_attempts.sql  022_exam_attempt_type.sql  023_exam_pool.sql  024_exam_session.sql  025_misconception_registry.sql  032_source_layer.sql  034_assessment_contract_snapshots.sql  035_proposal_dependencies.sql  036_content_events_entity_types.sql  037_canonical_facet_state.sql  040_source_unit_selections.sql  041_source_unit_inventories.sql  044_provenance_manifests_apply_intents.sql  045_synthesis_generation_needs.sql  047_compositional_misconceptions.sql  048_ingest_batch_priority.sql  049_source_exposure_events.sql  050_capability_residual_and_identifiability.sql  052_source_exposure_contexts.sql  (+49 more)
(+1022 files in other folders)
