[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "learnloop"
version = "0.1.0"
description = "Local adaptive learning vault with deterministic scheduling and Codex-assisted authoring."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "ruamel.yaml>=0.18",
  "textual>=8.2.7",
  "typer>=0.12",
  "trafilatura>=2,<3",
  "beautifulsoup4>=4.12",
  "lxml==5.3.0",
  "youtube-transcript-api>=0.6",
  "openai>=1.0",
  "pypdf>=6.14.2",
  "tomlkit>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
# High-fidelity PDF extraction (headings, tables, LaTeX math, OCR) for
# canonical source ingestion; heavy (pulls in torch). Without it, PDF
# ingestion falls back to plain pypdf text extraction.
pdf = [
  "marker-pdf>=1.10",
]

[project.scripts]
learnloop = "learnloop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/learnloop", "src/learnloop_sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
