[package]
name = "learnloop-tauri"
version = "0.1.0"
description = "LearnLoop desktop GUI"
authors = ["LearnLoop"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
